@@ -3,8 +3,11 @@ djvusmooth (0.2.14) UNRELEASED; urgency=low
   * Add “Open recent” submenu.
     https://bitbucket.org/jwilk/djvusmooth/issue/7
   * Do not abort opening a new file if user chose to save the current one.
+  * Allow removing the whole outline by selecting root element in the sidebar
+    and pressing Delete.
+    + Remove menu item “Edit → Outline → Remove all”; it's no longer needed.
 
- -- Jakub Wilk <jwilk@jwilk.net>  Sat, 13 Oct 2012 21:10:06 +0200
+ -- Jakub Wilk <jwilk@jwilk.net>  Sat, 13 Oct 2012 21:40:06 +0200
 
 djvusmooth (0.2.13) unstable; urgency=low
 
